--- a/index.css
+++ b/index.css
@@ -1,43 +1,93 @@
-body{
+*{
     margin: 0;
     padding: 0;
-    background-color: #1F2937;
-    color: wheat;
+    box-sizing:border-box;
+    font-family: 'Inter', sans-serif;
+    background-color: #1f293a;
+    color: beige;
+}
+h1{
+    text-align: center;
+    width: fit-content;
+    margin: auto;
+    padding: 15px 0 30px;
+}
+input{
+    background-color: #E5E5E5;
+    width: 61px;
+    height: 43px;
+    border: 0.5px #313131;
+    padding: 0.5px ;
+    cursor: pointer;
 }
 
-.colorInp{
-    width: 51px;
-    height: 34px;
-    top: 28px;
-    left: 19px;
-    border: 0.5px;
-}
-
-.styleSelect{
+select{
     width: 312px;
     height: 42px;
-    top: 24px;
-    left: 87px;
     border-radius: 6px;
-    border: 1px solid #D1D5DB;
-    padding: 9px 13px;
+    border: 1px solid #d1d5db;
     gap: 4px;
-    background-color: #1F293A;
-    color:#D5D4D8;
-
-    &:open{
-    background-color:#1F2937;
-    width: 312px;
-    height: 287px;
-    border-radius: 68px;
-    padding-top: 4px;
-    padding-bottom: 4px;
-
+    background-color: #1f293a;
+    color: #D5D4D8;
+    font-weight: 400;
     font-size: 16px;
-    font-weight: 600;
     line-height: 24px;
     letter-spacing: 0%;
-    color: #ffffff;
-    }
+    cursor: pointer;
 }
 
+.getHexBtn{
+    border: none;
+    background-color: #3D4B60;
+    width: 123px;
+    height: 42px;
+    border-radius: 4px;
+    color: #ffffff;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 16px;
+    letter-spacing: 0%;
+    cursor: pointer;
+}
+
+.colorTools{
+    width: fit-content;
+    margin:24px auto;
+    display: flex;
+    justify-content:center;
+    align-content: center;
+    gap: 20px;
+}
+
+.colorBox{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.color{
+    width: 110px;
+    height: 550px;
+}
+.colorOne{
+    background-color: #F55A5A;
+}
+.colorTwo{
+    background-color: #2B283A;
+}
+.colorThree{
+    background-color: #FBF3AB;
+}
+.colorFour{
+    background-color: #AAD1B6;
+}
+.colorFive{
+    background-color: #A626D3;
+}
+
+.colorBoxCodes{
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    
+}
