--- a/index.css
+++ b/index.css
@@ -3,7 +3,7 @@
     padding: 0;
     box-sizing:border-box;
     font-family: 'Inter', sans-serif;
-    background-color: #1f293a;
+    background-color:#1f293a;
     color: beige;
 }
 h1{
@@ -49,7 +49,9 @@ select{
     letter-spacing: 0%;
     cursor: pointer;
 }
-
+.getHexBtn:active{
+    box-shadow: 2px 2px #d1d5db;
+}
 .colorTools{
     width: fit-content;
     margin:24px auto;
@@ -68,26 +70,21 @@ select{
 .color{
     width: 110px;
     height: 550px;
-}
-.colorOne{
-    background-color: #F55A5A;
-}
-.colorTwo{
-    background-color: #2B283A;
-}
-.colorThree{
-    background-color: #FBF3AB;
-}
-.colorFour{
-    background-color: #AAD1B6;
-}
-.colorFive{
-    background-color: #A626D3;
+    border: 1px solid;
+    cursor: pointer;
 }
 
 .colorBoxCodes{
     display: flex;
     justify-content: center;
     align-content: center;
-    
+    gap: 2.3em;
+    margin: 10px 0;
+    cursor: pointer;
+}
+.colorBoxCodes p{
+    font-size: 17px;
+    font-weight: 500;
+    line-height: 24px;
+    letter-spacing: 0%;
 }
